Test: 비관적 락 동시성 테스트 코드 작성

--- a/shop/build.gradle
+++ b/shop/build.gradle
@@ -33,8 +33,16 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.5.0')
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+test{
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
