--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,3 +1,14 @@
 spring:
   application:
     name: server
+server:
+  port: 19090
+
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:19090/eureka/
+  instance:
+    hostname: localhost
